<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="employee"
            type="com.example.employees65apps.domain.EmployeeWithSpecialties" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/employee_photo_detailed"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/employee_photo_label"
                android:scaleType="fitCenter"
                app:imageUrl="@{employee.avatarUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/last_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:gravity="end"
                android:text="@string/last_name_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employee_photo_detailed" />

            <TextView
                android:id="@+id/first_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/first_name_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_title" />

            <TextView
                android:id="@+id/birthday_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/birthday_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_title" />

            <TextView
                android:id="@+id/age_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/age_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthday_title" />

            <TextView
                android:id="@+id/specialty_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/specialty_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age_title" />

            <TextView
                android:id="@+id/employee_last_name_detailed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{employee.lastName}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBaseline_toBaselineOf="@+id/last_name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                tools:text="Варламов" />

            <TextView
                android:id="@+id/employee_first_name_detailed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{employee.firstName}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBaseline_toBaselineOf="@+id/first_name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                tools:text="Артур" />

            <TextView
                android:id="@+id/employee_birthday_detailed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBaseline_toBaselineOf="@+id/birthday_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:setBirthday="@{employee.birthday}"
                tools:text="22.02.1992" />

            <TextView
                android:id="@+id/employee_age_detailed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBaseline_toBaselineOf="@+id/age_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:setAge="@{employee.age}"
                tools:text="32" />

            <TextView
                android:id="@+id/employee_specialty_detailed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBaseline_toBaselineOf="@+id/specialty_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:setSpecialties="@{employee.specialties}"
                tools:text="разработчик" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>